--- a/index.html
+++ b/index.html
@@ -57,12 +57,9 @@
             Tutoring, device installation, repairs, networking, troubleshooting.</p>
         </div>
         <div class="panel" ng-show="panel.isSelected(3)">
-            <h4>Contact</h4>
-            <p>For a free consultation, or to schedule an appointment, please call:
-
-Or email us at rubentotherescue@gmail.com</p>
+            <h4>Contact for Questions or Appointments</h4>
+            <p>For a free consultation or to schedule an appointment, please fill out the form below or e-mail us at <a href="ruben2therescue@gmail.com">ruben2therescue@gmail.com</a></p>
             <div id="contact">
-                <h4>Contact for Questions or Appointments</h4>
             <!--<form action="mailto:ruben2therescue@gmail.com?subject=Technical Support" method="post" enctype="text/plain">-->
                 <form class="form-horizontal" action="mail.php" method="POST" ng-controller="formController" ng-submit="submit()">
                     <div class="form-group">
