--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
             <h4>Contact for Questions or Appointments</h4>
             <p>For a free consultation or to schedule an appointment, please fill out the form below or e-mail us at <a href="ruben2therescue@gmail.com">ruben2therescue@gmail.com</a></p>
             <div id="contact">
-            <!--<form action="mailto:ruben2therescue@gmail.com?subject=Technical Support" method="GET" enctype="text/plain">-->
-                <form class="form-horizontal" action="mail.php" method="GET" ng-controller="formController" ng-submit="submit()">
+            <!--<form action="mailto:ruben2therescue@gmail.com?subject=Technical Support" method="POST" enctype="text/plain">-->
+                <form class="form-horizontal" action="mail.php" method="POST" ng-controller="formController" ng-submit="submit()">
                     <div class="form-group">
                         <label for="nameInput" class="col-sm-2 control-label">Name</label>
                         <div class="col-sm-10">
@@ -81,9 +81,9 @@
                         </div>
                     </div>
                     <div class="form-group">
-                        <label for="messageText" class="col-sm-2 control-label">Services Needed</label>
+                        <label for="messaPOSText" class="col-sm-2 control-label">Services Needed</label>
                         <div class="col-sm-10">
-                            <textarea id="messageText" name="message" class="form-control" rows="5" placeholder="Services Needed"></textarea>
+                            <textarea id="messaPOSText" name="message" class="form-control" rows="5" placeholder="Services Needed"></textarea>
                         </div>
                     </div>   
 
