--- a/index.html
+++ b/index.html
@@ -66,13 +66,17 @@
             <br><br><h5>Testing Comment Section</h5>
             <form name="commentForm" ng-controller="CommentController as commentCtrl" ng-submit="commentCtrl.addComment">
                 <blockquote>
-                    {{commentCtrl.comment.body}}
-                    <cite>from: {{commentCtrl.comment.author}}</cite>
+                    {{commentCtrl.comment.body}}<br>
+                    <cite>- {{commentCtrl.comment.author}}</cite>
                 </blockquote>
-                <textarea ng-model="commentCtrl.comment.body"></textarea>
-                <label>from: </label>
-                <input ng-model="commentCtrl.comment.author" type="text" />
-                <input type="submit" value="submit" />
+                <div class="form-group">
+                    <textarea ng-model="commentCtrl.comment.body" class="form-control" rows="4"></textarea>
+                </div>
+                <div class="form-group">
+                    <label>from: </label>
+                    <input ng-model="commentCtrl.comment.author" type="text" class="form-control" />
+                </div>
+                <input type="submit" value="submit" class="btn btn-default"/>
             </form>
 
 
