--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
                <h5>Testimonials</h5>
                 <p>
                     <img src="images/quote.png" class="img-responsive">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                     Ruben should be given special accolades for his patience with those of us who are not techno geniuses. He remembered me every time I went in there and knew exactly what I had purchased. In this technologically advanced world, it is nice to see that some people have not lost the personal touch...Way to go Ruben and the rest of the staff!<br>
+                    -Cate, customer for 14 years
                     <img src="images/close-quote.png" class="img-responsive">
                 </p>
             </div>
