--- a/index.html
+++ b/index.html
@@ -65,29 +65,30 @@
             <div id="testimonials">
                <h5>Testimonials</h5>
                 <p>
-                    <img src="images/quote.png" class="img-responsive">
+                    <img src="images/quote.png">
                      Ruben should be given special accolades for his patience with those of us who are not techno geniuses. He remembered me every time I went in there and knew exactly what I had purchased. In this technologically advanced world, it is nice to see that some people have not lost the personal touch...Way to go Ruben and the rest of the staff!<br>
                     -Cate, customer for 14 years
-                    <img src="images/close-quote.png" class="img-responsive">
+                    <img src="images/close-quote.png">
                 </p>
             </div>
 
-
-            <br><br><h5>Testing Comment Section</h5>
-            <form name="commentForm" ng-controller="CommentController as commentCtrl" ng-submit="commentCtrl.addComment">
-                <blockquote>
-                    {{commentCtrl.comment.body}}<br>
-                    <cite>- {{commentCtrl.comment.author}}</cite>
-                </blockquote>
-                <div class="form-group">
-                    <textarea ng-model="commentCtrl.comment.body" class="form-control" rows="4"></textarea>
-                </div>
-                <div class="form-group">
-                    <label>from: </label>
-                    <input ng-model="commentCtrl.comment.author" type="text" class="form-control" />
-                </div>
-                <input type="submit" value="submit" class="btn btn-default"/>
-            </form>
+            <div id="comment-section">
+                <br><br><h5>Testing Comment Section</h5>
+                <form name="commentForm" ng-controller="CommentController as commentCtrl" ng-submit="commentCtrl.addComment">
+                    <blockquote>
+                        {{commentCtrl.comment.body}}<br>
+                        <cite>- {{commentCtrl.comment.author}}</cite>
+                    </blockquote>
+                    <div class="form-group">
+                        <textarea ng-model="commentCtrl.comment.body" class="form-control" rows="4"></textarea>
+                    </div>
+                    <div class="form-group">
+                        <label>from: </label>
+                        <input ng-model="commentCtrl.comment.author" type="text" class="form-control" />
+                    </div>
+                    <input type="submit" value="submit" class="btn btn-default"/>
+                </form>
+            </div>
 
 
         </div>
