--- a/index.html
+++ b/index.html
@@ -64,12 +64,11 @@
             <br>
             <div id="testimonials">
                <h5>Testimonials</h5>
-                <p>
-                    <img src="images/quote.png">
-                     Ruben should be given special accolades for his patience with those of us who are not techno geniuses. He remembered me every time I went in there and knew exactly what I had purchased. In this technologically advanced world, it is nice to see that some people have not lost the personal touch...Way to go Ruben and the rest of the staff!<br>
-                    -Cate, customer for 14 years
-                    <img src="images/close-quote.png">
-                </p>
+              
+                    <p><img src="images/quote.png">
+                    Ruben should be given special accolades for his patience with those of us who are not techno geniuses. He remembered me every time I went in there and knew exactly what I had purchased. In this technologically advanced world, it is nice to see that some people have not lost the personal touch...Way to go Ruben and the rest of the staff!<img src="images/close-quote.png"></p>
+                    <p>-Cate, customer for 14 years</p>
+                
             </div>
 
             <div id="comment-section">
