--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <section ng-controller="PanelController as panel">
     <div class="container">
             <div class="row">
-                <div class="col-md-2 col-sm-2 col-xs-12">
+                <div class="col-md-2 col-sm-2 col-xs-12" id="logo-section">
                     <img src="images/logo3.jpg">
                 </div>
                 <div class="col-md-10 col-sm-10 col-xs-12 tabrow">
