--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                         <footer>Cate, longtime customer</footer>
                         </blockquote>
                         <blockquote><img src="images/quote.png">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum.<img src="images/close-quote.png">
-                        <footer>Name, longtime customer</footer>
+                        Although I have a Ph.D. from Columbia University, as someone who grew up in the era of rotary phones and black &amp; white TV, Ruben has been a lifesaver as our guide into the 'new world' of technology. His vast knowledge of technology, both cell phones and computers is excellent. More important though is his ability to troubleshoot, fix the problem, and  explain to those of us who are 'technologically challenged,' how to go about using and actually enjoying our cell phones and computers. Ruben is extremely patient and is able to teach his clients how to use these devices without fear or trepidation. I have been a client of Ruben for several years and would highly recommend him to others who need assistance with their cell phones or computers.<img src="images/close-quote.png">
+                        <footer>Dr. David Lutwin, longtime customer</footer>
                         </blockquote>     
                 </div>
 
