--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                             <label>from: </label>
                             <input ng-model="commentCtrl.comment.author" type="text" class="form-control" />
                         </div>
-                        <input type="submit" value="submit" class="btn btn-default"/>
+                        <input ng-click="btn_add();" type="submit" value="submit" class="btn btn-default"/>
                     </form>
                 </div>
             </div>
