--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container panel-section">
             <div class="panel" ng-show="panel.isSelected(1)">
                 <h4>About</h4>
-                <p>Ruben was born and raised in Long Beach, New York, where he is currently working at a wireless store. Ruben has always loved technology and has a passion for teaching people to live in harmony with their devices. Whether you need tech support, purchasing advice, networking or virus removal, Ruben will come to your rescue! Call for a free consultation at (516) 387-2522 <span class="glyphicon glyphicon-phone"></span></p>
+                <p>Ruben was born and raised in Long Beach, New York, where he is currently working at a wireless store. Ruben has always loved technology and has a passion for teaching people to live in harmony with their devices. Whether you need tech support, purchasing advice, networking or virus removal, Ruben will come to your rescue! Call for a free consultation at <b>(516) 387-2522</b></p>
                 <br>
 
                 <div id="testimonials">
