--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
                 <div id="comment-section">
                     <br><br><h5>Comments for Ruben to the Rescue!</h5>
-                    <form name="commentForm" ng-controller="CommentController as commentCtrl" ng-submit="commentCtrl.addComment">
-                        <blockquote>
+                    <form name="commentForm" ng-controller="CommentController as commentCtrl" ng-submit="commentCtrl.addComment()">
+                        <blockquote ng-repeat="comment in commentCtrl">
                             {{commentCtrl.comment.body}}<br>
                             <cite>- {{commentCtrl.comment.author}}</cite>
-                            <a href="#" class="pull-right" ng-click="removeItem($index)">X</a>
+                            <a href="#" class="pull-right" ng-click="remItem($index)">X</a>
                         </blockquote>
                         <p>Let us know about your experience and what you think of the services provided.</p>
                         <div class="form-group">
